Fixed header z-index

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ body {
     /* box-shadow: 0px 0px 8px rgba(0,0,0,.6); */
     /* box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; */
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
-    z-index: 99;
+    z-index: 999;
     background-color: var(--light-color);
 }
 .header img {
